<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#eeeeee"
    tools:context="com.gabiq.smartvent.MainActivity">

    <WebView
        android:id="@+id/webView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/controlView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:padding="4dp"
            android:background="@android:color/white"
            >
            <ImageView
                android:id="@+id/vent1_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/office" />

            <TextView
                android:id="@+id/vent1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/vent1_img"
                android:layout_toLeftOf="@+id/vent1_open"
                android:text="@string/office_txt" />
            <Button
                android:id="@+id/vent1_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                android:layout_toLeftOf="@+id/vent1_close"
                android:text="@string/open_btn_txt" />
            <Button
                android:id="@+id/vent1_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:text="@string/close_btn_txt" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:padding="4dp"
            android:background="@android:color/white"
            >
            <ImageView
                android:id="@+id/vent2_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/bedroom" />

            <TextView
                android:id="@+id/vent2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/vent2_img"
                android:layout_toLeftOf="@+id/vent2_open"
                android:text="@string/bedroom_txt" />
            <Button
                android:id="@+id/vent2_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/vent2_close"
                android:text="@string/open_btn_txt" />
            <Button
                android:id="@+id/vent2_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/close_btn_txt" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:padding="4dp"
            android:background="@android:color/white"
            >
            <ImageView
                android:id="@+id/vent3_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/master_bedroom" />

            <TextView
                android:id="@+id/vent3_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/vent3_img"
                android:layout_toLeftOf="@+id/vent3_open"
                android:text="@string/master_bedroom_txt" />
            <Button
                android:id="@+id/vent3_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/vent3_close"
                android:text="@string/open_btn_txt" />
            <Button
                android:id="@+id/vent3_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/close_btn_txt" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:padding="4dp"
            android:background="@android:color/white"
            >
            <ImageView
                android:id="@+id/vent4_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/kitchen" />

            <TextView
                android:id="@+id/vent4_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/vent4_img"
                android:layout_toLeftOf="@+id/vent4_open"
                android:text="@string/kitchen_txt" />
            <Button
                android:id="@+id/vent4_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/vent4_close"
                android:text="@string/open_btn_txt" />
            <Button
                android:id="@+id/vent4_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/close_btn_txt" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:padding="4dp"
            android:background="@android:color/white"
            >
            <ImageView
                android:id="@+id/vent5_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/living_room" />

            <TextView
                android:id="@+id/vent5_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/vent5_img"
                android:layout_toLeftOf="@+id/vent5_open"
                android:text="@string/living_room_txt" />
            <Button
                android:id="@+id/vent5_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/vent5_close"
                android:text="@string/open_btn_txt" />
            <Button
                android:id="@+id/vent5_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/close_btn_txt" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:padding="4dp"
            android:background="@android:color/white"
            >
            <ImageView
                android:id="@+id/vent6_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:padding="5dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:scaleType="centerInside"
                android:src="@drawable/bathroom" />

            <TextView
                android:id="@+id/vent6_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_toRightOf="@+id/vent6_img"
                android:layout_toLeftOf="@+id/vent6_open"
                android:text="@string/bathroom_txt" />
            <Button
                android:id="@+id/vent6_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/vent6_close"
                android:text="@string/open_btn_txt" />
            <Button
                android:id="@+id/vent6_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/close_btn_txt" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
